Fixed named for routing, removed trash files
